tests/test159.rael.exp
Error [1:8]: Unrecognized token
| log 123.
|        ^
